animation-style.css
@import url('https://fonts.googleapis.com/css2?family=Asap&display=swap');
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Asap", sans-serif;
}
html {
  background-color: #1e1e1e;
}
body{
    background-image: url('images/liquid-cheese.svg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    overflow-x: hidden;
    z-index: 2;
}

section, fullsection, AlwaysShowSection{
  color: #ffffff;
  min-height: 10vh;/*100vh;*/
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 10%;
  margin-right: 10%;
}
fullsection{
  min-height: 100vh;
  margin-bottom: -15%;
}


section .container{
  width: 100%;
  margin: 5%; /* HHow close to first element?*/
  margin-left: 5%;
  margin-right: 5%;
  margin-bottom: 7%; /* How close to each other?*/
}
fullsection h1{
  font-size: 3rem;
  margin: 0;
  width: 100%;
}

.grid-container {
  width: 100%;
  text-align: center;
  display: grid;
  grid-template-columns: 1fr;
}

.grid-element {
  align-self: center;
  height: 30px;
  margin: 3%;
}

.grid-element:nth-child(2n+3)::after{
  content:'';
  width:1px;
  height:100%;
  display:block;
  background-color:black;
  position:absolute;
  margin-left:-7px;
  top:0;
}

progress{
  width:100%;
  height:40px
}
.column{
  width: 50%;
  height: 100%;
  display: table-cell;
  float: left;
  vertical-align: middle;
  line-height: 300px;
}

.column h2 {
  font-size: 2.7em;
  height: 100%;
  vertical-align: middle;
  text-transform: uppercase;

}
.column h2 :not(.texttop){
  text-align: center;

}
.border-right{
  border-right: 4px solid white;
}
.border-sides{
  border-left: 4px solid white;
  border-right: 4px solid white;
}
span{
  width: 100%;
  display: inline-block;
  vertical-align: middle;
  line-height: 18px; /* <-- adjust this */
}
section h2{
  font-size: 2.7em;
  text-align: center;
  height: 100%;
  vertical-align: middle;
  text-transform: uppercase;
}
section h3{
  font-size: 1em;
  padding: 20px;
}
section .text-container{
   display: flex;
   align-items: right;
}
section .text-container .text-box{
  margin: 0;
  padding: 2%;
  width: 33%;
  align-items: right;
  text-align: center;
  /*background: #00c2cb;*/
}
section .text-container .text-box h3{
  font-size: 30px;
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 10px;
}
section .text-box {
  width: 33%;
}



.reveal{
  position: relative;
  opacity: 0;
  transition: 0.75s all ease;
}
AlwaysShowSection .reveal{
  opacity: 1;
}
.reveal.active{
  opacity: 1;
}
/*.wave {
  background-image: url(images/liquid-cheese.svg);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}*/
.circles {
  opacity: 0;
  transition: 0.75s all ease;
  position: fixed;
  top: 0;
  right: 0;
  min-height: 100%;
  min-width: 100%;
  z-index: -1;
}
.circles.active {
  opacity: 1;
  z-index: 0;
}
.text-box h4 {
  font-size: 1.2em;
}
.avatar {
  width: 15em;
  border-radius: 50%;
  border: 0.6em solid white;
}
.logotop {
  display: table-cell; padding-left: 10%;width: auto;height: 19em; 
}
.texttop {
  text-align: right;
}
.sponsors {
  text-align: center; 
}
.sponsor {
  width: 100%;
  max-width: 300px; 
}

@media (max-width: 1230px){
  section .text-container {
    display: block;
  }
  section .text-container .text-box {
    width: 100%;
    flex-shrink: 0;
    margin-bottom: 20%;
    float:left;
    text-align: center;
    flex-shrink: 0;
  }
  .border-sides{
    border-left: 0px solid white;
    border-right: 0px solid white;
  }
}
@media (max-width: 900px){
  fullsection{
    min-height: 80vh;
  }
  .circles {
    min-height: 120%;
  }
  .column {
    width: 100%;
    line-height: 200px;
    text-align: center;
  }
  .border-right{
    border-right: 0px solid white;
  }

  .border-sides{
    border-left: 0px solid white;
    border-right: 0px solid white;
  }
  section .text-container {
    display: block;
  }
  section .text-container .text-box {
    width: 100%;
    flex-shrink: 0;
    margin-bottom: 20%;
    float:left;
    text-align: center;
    flex-shrink: 0;
  }
  .bordertop  {
    padding-top: 10%;
    border-top: 4px solid white;
  }
  .bordertop2  {
    border-top: 4px solid white;
  }
  AlwaysShowSection .text-box {
    border-top: 0px solid white;
  }
  .mobilereveal {
    position: relative;
    opacity: 0;
    transition: 0.75s all ease;
  }
  .mobilereveal.active {
    opacity: 1;
  }
  .logotop {
    display: table-cell; padding-left: 0%;width: auto;height: 19em;
    padding-top: 8%; 
  }
  .texttop {
    text-align: center;
    line-height: normal;
    padding-top: 50%;
  }
  .sponsor {
    width: 100%;
    max-width: 300px; 
  }
}

